@@ -10,6 +10,7 @@ StorageLoader: selecting Snowplow's hosted-assets bucket based on region (#1012)
 EmrEtlRunner: bumped to 0.9.2
 EmrEtlRunner: no rows to process now returns 0, not 1 (#1018)
 EmrEtlRunner: fixed bug where --process-enrich doesn't work, thanks @kingo55! (#1089)
+EmrEtlRunner: now checking that output directories are empty before running (#1124)
 Scala Common Enrich: bumped to 0.7.0
 Scala Common Enrich: bumped scala-maxmind-iplookups to 0.2.0 (#1002)
 Scala Common Enrich: added support for non-GA campaign attribution: phase 1 (#402)
